--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,45 +1,76 @@
 <app-header></app-header>
 
-<h1>Admin</h1>
+<div class="row">
+    <div class="col-lg-6">
+        <h4 style="padding: 20px;"><b>
+                < Admin Dashboard>
+            </b></h4>
+    </div>
+</div>
 
-<div class="container mt-4">
-    <h1 style="text-align: center;">Data Table</h1>
-  
-    <table class="table">
-  
-      <!-- Header of table -->
-  
-      <thead>
-        <tr>
-          <th>Id</th>
-          <th>Name</th>
-          <th>Password</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-  
-      <!-- Data of table -->
-      
-      <tbody>
-        <tr *ngFor="let item of personData">
-          <td>{{ item.id }}</td>
-          <td>{{ item.name }}</td>
-          <td>{{ item.password }}</td>
-          <td>
-            <button class="btn btn-success btn-sm" >Edit</button> &nbsp;
-            <button class="btn btn-danger btn-sm" >Delete</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
 
- 
-<!-- <div class="sidebar">
-    <ul class="list-group">
-      <li class="list-group-item">Home</li>
-      <li class="list-group-item">About</li>
-      <li class="list-group-item">Services</li>
-      <li class="list-group-item">Contact</li>
-    </ul>
-  </div> -->
+
+<div class="row">
+    <div class="col-lg-12">
+        <div class="container-fluid">
+            <div class="row" style="justify-content: center;">
+                <div class="col-lg-8">
+
+                    <!-- Reactive Form -->
+
+                    <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+                        <div class="formGroup">
+                            <label for="name">Name</label>
+                            <input type="text" id="name" class="form-control" formControlName="name">
+                        </div>
+                        <div class="formGroup">
+                            <label for="message">Password</label>
+                            <input type="password" id="password" class="form-control" formControlName="password">
+                        </div>
+                        <br>
+                        <button type="submit" class="btn btn-primary"> {{userId > 0 ? 'Edit User' : 'Add User'}}</button>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+<div class="center">
+
+    <div class="container mt-4">
+        <h1 style="text-align: center;">Data Table</h1>
+
+        <table class="table">
+
+            <!-- Header of table -->
+
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Name</th>
+                    <th>Password</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+
+            <!-- Data of table -->
+
+            <tbody>
+                <tr *ngFor="let item of personData">
+                    <td>{{ item.id }}</td>
+                    <td>{{ item.name }}</td>
+                    <td>{{ item.password }}</td>
+                    <td>
+                        <button class="btn btn-success" (click)="updatePersons(item.id)">Edit</button> &nbsp;
+                        <button class="btn btn-danger" (click)="deletePersons(item.id)">Delete</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
