--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,6 +2,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <h2 class="navbar-brand" style="font-weight: 900;" >CodeWala.pk</h2>
 
-    <button class="btn btn-outline-danger my-2 my-sm-0" type="submit" (click)="logout()">Logout</button>
+    <button class="btn btn-warning" style="margin-left: 58%;" (click)="admin()">Admin</button>
+    <button class="btn btn-primary" (click)="manageMod()">Moderator</button>
+    <button class="btn btn-success" (click)="manageUser()">User</button>
+
+    <button class="btn btn-danger my-2 my-sm-0" type="submit" (click)="logout()">Logout</button>
 
 </nav>
