--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,19 +1,54 @@
-<div class="login-container">
-    <h2>Login</h2>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="username">Username:</label>
-        <input type="text" id="username" formControlName="username" />
-        <div *ngIf="loginForm.get('username')?.hasError('required')">Username is required</div>
+<head>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+      integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+</head>
+
+<section class="vh-100">
+  <div class="container-fluid">
+      <div class="row">
+          <div class="col-sm-6 px-0 d-none d-sm-block">
+              <img src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX19394842.jpg" alt="Login image"
+                  class="w-100 vh-100" style="object-fit: cover; object-position: left;">
+          </div>
+
+          <div class="col-sm-6 text-black">
+              <div class="px-5 ms-xl-4">
+                  <i class="fas fa-crow fa-2x me-3 pt-5 mt-xl-4" style="color: #709085;"></i>
+                  <span class="h1 fw-bold mb-0">< CodeWala > <p>Welcome, {{ name }}!</p></span>
+              </div>
+
+              <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
+
+                  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" style="width: 23rem;">
+                      <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Log in </h3>
+
+                      <div class="input-group mb-3">
+                          <div class="input-group-append">
+                              <span class="input-group-text"><i class="fas fa-user"></i></span>
+                          </div>
+                          <input type="text" class="form-control input_user" value="" formControlName="username"
+                              placeholder="User Name">
+                      </div>
+
+                      <div class="input-group mb-2">
+                          <div class="input-group-append">
+                              <span class="input-group-text"><i class="fas fa-key"></i></span>
+                          </div>
+                          <input type="password" class="form-control input_pass" value="" formControlName="password"
+                              placeholder="User Password">
+                      </div>
+                      <br>
+                      <div class="pt-1 mb-4">
+                          <button class="btn btn-primary btn-lg btn-block" type="submit"
+                              [disabled]="loginForm.invalid">Login</button>
+                      </div>
+
+                      <p>Don't have an account? <a class="link-primary" href="javascript:void(0);"
+                              [routerLink]="['/signup']">Sign Up</a></p>
+                  </form>
+              </div>
+          </div>
+
       </div>
-  
-      <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" id="password" formControlName="password" />
-        <div *ngIf="loginForm.get('password')?.hasError('required')">Password is required</div>
-      </div>
-  
-      <button type="submit" [disabled]="loginForm.invalid">Login</button>
-    </form>
   </div>
-  
+</section>
